--- a/public/style/admin/form.css
+++ b/public/style/admin/form.css
@@ -53,3 +53,48 @@
 .form-input .error-message{
     color: rgba(255, 98, 98, 1);
 }
+
+
+/*
+* Preview image
+*/
+.form-group.preview-img-form{
+    align-items: start;
+}
+
+.preview-imgs{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.preview-list{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px;
+    padding-right: 15px;
+    border-radius: 10px;
+    gap: 10px;
+    height: 100px;
+    background: #f9f9f9;
+    box-shadow: 0 0 10px rgba(0,0,0,.25);
+}
+
+.preview-list img{
+    height: 90px;
+    width: 90px;
+    object-fit: contain;
+    border-radius: 5px;
+}
+
+.delete-media-button{
+    height: 40px;
+    width: 40px;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
