feat: "persiapan awal" feature done

--- a/public/style/admin/order.css
+++ b/public/style/admin/order.css
@@ -88,6 +88,18 @@
     gap: 20px;
     padding: 10px;
 }
+.order-file .order-file-header{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 10px;
+}
+.order-file .order-file-header > a{
+    box-shadow: 0 0 10px rgba(0, 0, 0, .3);
+    padding: 7px 10px;
+    border-radius: 10px;
+}
 
 
 
