--- a/public/style/admin/form.css
+++ b/public/style/admin/form.css
@@ -53,6 +53,26 @@
 .form-input .error-message{
     color: rgba(255, 98, 98, 1);
 }
+.form-group.other-type-form{
+    align-items: start;
+}
+.form-input input.select2{
+    height: auto !important;
+}
+.form-input:has(input[type="checkbox"]){
+    display: flex;
+    /* flex-direction: row; */
+}
+.form-input:has(input[type="checkbox"]) label{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: start !important;
+    gap: 10px;
+}
+.form-input:has(input[type="checkbox"]) input{
+    width: min-content;
+}
 
 
 /*
@@ -97,11 +117,4 @@
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-.form-group.other-type-form{
-    align-items: start;
-}
-.form-input input.select2{
-    height: auto !important;
 }
