--- a/public/style/admin/form.css
+++ b/public/style/admin/form.css
@@ -21,7 +21,7 @@
     justify-content: end;
 }
 
-.form-group label{
+.form-group > label{
     width: 15%;
 }
 
@@ -59,9 +59,16 @@
 .form-input input.select2{
     height: auto !important;
 }
+
+.form-group:has(input[type="checkbox"]){
+    align-items: start !important;
+}
 .form-input:has(input[type="checkbox"]){
     display: flex;
-    /* flex-direction: row; */
+    justify-content: start;
+    border: .5px solid #000;
+    padding: 10px;
+    border-radius: 10px;
 }
 .form-input:has(input[type="checkbox"]) label{
     width: 100%;
